# VLM

./: README.md  README_ORGANIZED.md  ROS2_QUICK_START.md  ROS2_ROBUST_WORKFLOW.md  compare_models.sh  enhanced_vlm_InternVL3-8B_detailed_20250611_161202.json  find_real_models.py  run_enhanced.sh  run_gemma3.sh  run_real_models.sh  run_vlm.sh  serve.sh  setup.sh  test_fail_hard.py  vlm.py  vlm_analysis_20250611_154921.json  vlm_analysis_20250611_155219.json  vlm_analysis_blip-image-captioning-base_20250611_160146.json  vlm_enhanced_selector.py  vlm_gemma3.py  vlm_model_selector.py  vlm_working_models.py  working_vlm_GIT_Large_detailed_20250611_161525.json  working_vlm_GIT_Large_detailed_20250611_161826.json
demos/: download_kitti_sample.sh  run_vlm_ros2_standalone.py
ros2_vlm/: README.md  build_ros2_robust.sh  demo.sh  hybrid_vlm_node.py  live_vlm_demo.py  requirements.txt  run_vlm_ros2.sh  setup.sh  test_vlm_processor.sh  vlm_processor.py
ros2_vlm/demos/: live_vlm_demo.py  ros2_camera_demo.sh  run_vlm_ros2_demo.sh
ros2_vlm/nodes/: hybrid_vlm_node.py  run_vlm_ros2.sh  vlm_processor.py
ros2_vlm/setup/: install_ros2_packages.sh  test_vlm_processor.sh
ros2_vlm/src/vlm_ros2/: CMakeLists.txt  package.xml  setup.py
ros2_vlm/src/vlm_ros2/action/: AnalyzeVideo.action
ros2_vlm/src/vlm_ros2/config/: vlm_params.yaml
ros2_vlm/src/vlm_ros2/install/: local_setup.sh  setup.sh
ros2_vlm/src/vlm_ros2/launch/: vlm_bag.launch.py  vlm_camera.launch.py
ros2_vlm/src/vlm_ros2/log/: latest_build
ros2_vlm/src/vlm_ros2/msg/: VLMAnalysis.msg
ros2_vlm/src/vlm_ros2/scripts/: vlm_client_example.py  vlm_node.py
ros2_vlm/src/vlm_ros2/srv/: AnalyzeImage.srv  SetPrompt.srv
scripts/ros2_original/: build_ros2.sh  install_ros2_jazzy.sh  run_ros2_bag.sh  run_ros2_camera.sh  run_ros2_interactive.sh  setup_ros2.sh  setup_ros2_manual.sh
scripts/ros2_robust/: install_ros2_robust.sh  run_ros2_camera_robust.sh  validate_ros2_setup.sh
standalone/: README.md  run.sh  setup.sh  vlm_standalone.py
vLLM-VLM/: README.md  README_CURRENT_STATUS.md  requirements.txt  run.sh  run_web.sh  setup.sh  vlm_simple.py  vlm_simple_text.py  vlm_web.py
vLLM-VLM/templates/: vlm_chat.html
vlm_server/: README.md  __init__.py  config.json  requirements.txt  run.sh  server.py  vlm_backends.py
vlm_video_chat/: README.md  requirements.txt  run.sh  setup.sh  vlm_standalone.py
vlm_video_chat/web/: vlm.py  (+11 more)
(+9 files in other folders)
